# n12-mcp

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: main.py  models.py  n12.py  server.py
tests/: conftest.py  dataset.py  test_n12.py
tests/pages/: main_page.html  single_article.html
