[project]
name = "n12-mcp"
version = "0.1.0"
description = "N12 MCP for LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
]


[tool.ruff]
target-version = "py312"
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ", # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100", # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402", # false positives for local imports
    "E501", # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
]
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "requests-mock>=1.12.1",
]
